--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,32 @@
 body {
-background-color: pink;
+background-color: black;
+background-image: url('file:///Users/sundeepsamra/Projects/portfolio/Images/background.jpg');
+background-size: cover;
+background-position: fixed;
+font-family: 'Indie Flower', cursive;
+overflow: hidden;  //Change this to scroll or auto
+margin: 0;
+padding: 0;
+overflow: scroll;
 }
 
-nav {
-	border: none;
-    text-align: center;
-    margin-top: auto;
-}
+/*heading*/
 
-.middle {
-  border: auto;
+.masthead-heading {
+  background-color: black;
   text-align: center;
-  margin: 0 auto;
-  width: 25%;
+  font-size: 5em;
+  color: #FF00FF;
+  font-family: 'Poppins', sans-serif;
+  margin-top: 54px;
+  margin-bottom: 32px;
+}
+
+.masthead-intro {
+  text-align: center;
+  font-size: 2em;
+  color: white;
+  font-family: 'Poppins', sans-serif;
 }
 
 .content {
@@ -23,56 +37,103 @@ nav {
 
 /* Naviagtion Bar */
 
+
+nav {
+  border: none;
+    text-align: center;
+    margin-top: 0 auto;
+}
+
 ul {
 	list-style-type: none;
     margin: 0;
     padding: 15px;
     overflow: hidden;
-    background-color: #000000;
+    background-color: #FF6600;
     position: fixed;
     top: 0;
     width: 100%;
 }
 
-li { 
-	float: right;
-}
-
 li a {
-	display: inline-block;
 	color: #FFFFFF;
 	text-align: center;
-	padding: 10px 10px;
-    text-decoration: none;
-}
-
-/* Header */
-
-.main-header {
- width: 100%;
-    height: 100%;
-    padding: 0px;
-    margin: 0px;
-}
-
-.image {
-	width: 100%;
-	height: auto;
-}
-
-.image2 {
-  width: 25%;
-  height: auto;
+	padding-top: 12px;
+  padding-left: 25px;
+  text-decoration: none;
+    letter-spacing: 0.05em;
 }
 
 /* Footer */
-
 .content-footer {
-position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding: .5rem;
-  background-color: yellow;
+  clear: both;
+    position: relative;
+    z-index: 10;
+    background-color: blue;
+    color: white;
+    text-align: center;
+    padding: .5em;;
+}
+
+a:link { 
+  color: white;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #4dffff;
+}
+
+a:vistited {
+  color: #990099;
+}
+
+/* projects */
+
+.projectimages {
+  width: 700px;
+  height: 50%;
+  text-align: center;
+  display: inline-block;
+  vertical-align: middle;
+    opacity: 1.0;
+    filter: alpha(opacity=100); /* For IE8 and earlier */
+}
+
+img:hover {
+     opacity: 0.5;
+    filter: alpha(opacity=50);
+}
+
+.avatar {
+    width: 300px;
+  height: 50%;
+  text-align: center;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.aboutme {
+  margin-top: 10em;
+    margin-left: auto;
+    margin-right: auto;
+  color: white;
+  text-align: center;
+    font-family: 'Poppins', sans-serif;
+}
+
+.projects {
+  margin-top: 10em;
+    margin-left: auto;
+    margin-right: auto;
+  color: white;
   text-align: center;
 }
+
+@media only screen {
+  .projectimages, .avatar {
+max-width: 70%;
+  }
+}
+
+
