--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
 background-color: black;
-background-image: url('./Images/background.jpg');
+background-image: url('../Images/background.jpg');
 background-size: cover;
 background-position: fixed;
 font-family: 'Indie Flower', cursive;
